# aoc

./: .gitignore  Cargo.toml
2023/d01/: Cargo.toml
2023/d01/src/: main.rs
2023/d02/: Cargo.toml
2023/d02/src/: main.rs
2023/d03/: Cargo.toml
2023/d03/src/: main.rs
2023/d04/: Cargo.toml
2023/d04/src/: main.rs
2023/d05/: Cargo.toml
2023/d05/src/: main.rs
2023/d06/: Cargo.toml
2023/d06/src/: main.rs
2023/d07/: Cargo.toml
2023/d07/src/: main.rs
2023/d08/: Cargo.toml
2023/d08/src/: main.rs
2024/d01p1/: Cargo.toml
2024/d01p1/src/: main.rs
2024/d01p2/: Cargo.toml
2024/d01p2/src/: main.rs
2024/d02p1/: Cargo.toml
2024/d02p1/src/: main.rs
2024/d02p2/: Cargo.toml
2024/d02p2/src/: main.rs
2024/d03p1/: Cargo.toml
2024/d03p1/src/: main.rs
2024/d03p2/: Cargo.toml
2024/d03p2/src/: main.rs
2024/d04p1/: Cargo.toml
2024/d04p1/src/: main.rs
2024/d04p2/: Cargo.toml
2024/d04p2/src/: main.rs
2024/d05p1/: Cargo.toml
2024/d05p1/src/: main.rs
2024/d05p2/: Cargo.toml
2024/d05p2/src/: main.rs
2024/d06p1/: Cargo.toml
2024/d06p1/src/: main.rs
2024/d06p2/: Cargo.toml
2024/d06p2/src/: main.rs
2024/d07p1/: Cargo.toml
2024/d07p2/: Cargo.toml
2024/d08p1/: Cargo.toml
2024/d08p2/: Cargo.toml
2024/d09p1/: Cargo.toml
2024/d09p2/: Cargo.toml
2024/d10p1/: Cargo.toml
2024/d10p2/: Cargo.toml
2024/d11p1/: Cargo.toml
2024/d11p2/: Cargo.toml
2024/d12p1/: Cargo.toml
2024/d12p2/: Cargo.toml
2024/d13p1/: Cargo.toml
2024/d14p1/: Cargo.toml
2024/d14p2/: Cargo.toml
2024/d15p1/: Cargo.toml
2024/d15p2/: Cargo.toml
(+17 files in other folders)
