[workspace]
resolver = "2"
members = [ 
    "2023/d01",
    "2023/d02",
    "2023/d03",
    "2023/d04",
    "2023/d05",
    "2023/d06",
    "2023/d07",
    "2023/d08",    
    
    "2024/d01p1", 
    "2024/d01p2", 
    "2024/d02p1", 
    "2024/d02p2", 
    "2024/d03p1", 
    "2024/d03p2", 
    "2024/d04p1", 
    "2024/d04p2", 
    "2024/d05p1", 
    "2024/d05p2", 
    "2024/d06p1", 
    "2024/d06p2", 
    "2024/d07p1", 
    "2024/d07p2", 
    "2024/d08p1", 
    "2024/d08p2", 
    "2024/d09p1", 
    "2024/d09p2", 
    "2024/d10p1", 
    "2024/d10p2", 
    "2024/d11p1", 
    "2024/d11p2", 
    "2024/d12p1", 
    "2024/d12p2",
    "2024/d13p1", "2024/d14p1", "2024/d14p2",
]
